--- a/rich_sight/apps/blog/templates/blog/post/post_list.html
+++ b/rich_sight/apps/blog/templates/blog/post/post_list.html
@@ -10,4 +10,6 @@
         <p class="date">Published {{ post.publish }} By {{ post.author }}</p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
+
+    {% include "blog/pagination.html" with page=page_obj %}
 {% endblock %}
