--- a/rich_sight/apps/blog/templates/blog/base.html
+++ b/rich_sight/apps/blog/templates/blog/base.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <link href="{% static 'css/blog.css' %}" rel="stylesheet">
+{#    <link href="{% static 'css/blog.css' %}" rel="stylesheet">#}
 </head>
 <body>
     <div id="content">
